[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Utilities for handling MSG and SRV files in ROS"
license = "MIT"
name = "ros_message"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.1.1"

[dependencies]
array-init = "2.0.0"
hex = "0.4.3"
itertools = "0.10.1"
lazy_static = "1.4.0"
md-5 = "0.9.1"
regex = "1.5.4"
serde = "1.0.127"
serde_derive = "1.0.127"
thiserror = "1.0.26"

[dev-dependencies]
serde_json = "1.0.66"
