[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Pure Rust implementation of a ROS client library"
license = "MIT"
name = "rosrust"
readme = "../README.md"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.9.5"

[dependencies]
byteorder = "1.3.2"
ctrlc = {version="3.1.3", features=["termination"]}
error-chain = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.8"
nix = "0.15.0"
rosrust_codegen = {path="../rosrust_codegen"}
serde = "1.0.102"
serde_derive = "1.0.102"
xml-rpc = "0.0.12"
yaml-rust = "0.4.3"
crossbeam = "0.7.3"
net2 = "0.2.33"
colored = "1.8.0"

[dev-dependencies]
regex = "1.3.1"
criterion = "0.3.0"
env_logger = "0.7.1"

[features]
derive-serde = ["rosrust_codegen/derive-serde"]

[[bench]]
name = "benchmarks"
harness = false
path = "tests/benchmarks.rs"
