[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Actionlib functionality for rosrust"
license = "MIT"
name = "rosrust_actionlib"
version = "0.0.1"
build = "build.rs"

[dependencies]
rosrust = {path="../rosrust"}
rosrust_msg = {path="../rosrust_msg"}
paste = "1.0.5"

[build-dependencies]
rosrust_msg = {path="../rosrust_msg"}
