[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Message generation for rosrust"
license = "MIT"
name = "rosrust_codegen"
readme = "README.md"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.9.5"

[dependencies]
error-chain = "0.12.4"
lazy_static = "1.4.0"
regex = "1.5.4"
quote = "1.0.9"
syn = "1.0.74"
proc-macro2 = "1.0.28"
md-5 = "0.9.1"
hex = "0.4.3"

[lib]
proc-macro = true
