[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Message generation for rosrust"
license = "MIT"
name = "rosrust_codegen"
readme = "README.md"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.9.6"

[dependencies]
lazy_static = "1.4.0"
quote = "1.0.9"
syn = "1.0.74"
proc-macro2 = "1.0.28"
md-5 = "0.9.1"
hex = "0.4.3"
thiserror = "1.0.40"

[dependencies.ros_message]
path = "../ros_message"
version = "0.1.0"

[lib]
proc-macro = true
