[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Generates Rust implementations for all messages available on the system"
license = "MIT"
name = "rosrust_msg"
readme = "../README.md"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.1.0"
build = "build.rs"

[dependencies]
rosrust = "0.9.5"
