[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Generates Rust implementations for all messages available on the system"
license = "MIT"
name = "rosrust_msg"
readme = "../README.md"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.1.7"
build = "build.rs"

[dependencies]

[dependencies.rosrust]
path = "../rosrust"
version = "0.9.11"
