[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
license = "MIT"
name = "camera"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.0.1"

[dependencies]
env_logger = "0.5"
rosrust = {path="../../rosrust"}
rosrust_codegen = {path="../../rosrust_codegen"}

[[bin]]
name = "subscriber_camera"
path = "src/subscriber.rs"
