[package]
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
license = "MIT"
name = "parameters"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.0.1"

[dependencies]
env_logger = "0.5"
rosrust = {path="../../rosrust"}
serde = "1.0.25"
serde_derive = "1.0.25"

[[bin]]
name = "parameters"
path = "src/parameters.rs"
