[package]
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
license = "MIT"
name = "pubsub"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.0.1"

[dependencies]
env_logger = "0.4.3"
rosrust = "*"
rosrust_codegen = "*"
serde = "1.0.24"
serde_derive = "1.0.24"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[build-dependencies]
env_logger = "0.4.3"
rosrust_codegen = "*"
