[package]
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
license = "MIT"
name = "pubsub"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.0.1"

[dependencies]
env_logger = "0.5"
rosrust = {path="../../rosrust"}
rosrust_codegen = {path="../../rosrust_codegen"}
serde = "1.0.25"
serde_derive = "1.0.25"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[build-dependencies]
rosrust_codegen = {path="../../rosrust_codegen"}
