[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
license = "MIT"
name = "pubsub"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.0.1"

[dependencies]
env_logger = "0.5"
rosrust = {path="../../rosrust"}
rosrust_codegen = {path="../../rosrust_codegen"}

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "publisher_latch_demo"
path = "src/publisher_latch_demo.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[[bin]]
name = "loopback"
path = "src/loopback.rs"
