[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
license = "MIT"
name = "reservedkeywords"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.0.1"

[dependencies]
rosrust = {path="../../rosrust"}
rosrust_codegen = {path="../../rosrust_codegen"}

[[bin]]
name = "reserved_keywords_test"
path = "src/main.rs"
