<package>
  <name>common_msgs</name>
  <version>1.13.1</version>
  <description>
    common_msgs contains messages that are widely used by other ROS packages.
    These includes messages for
    actions (<a href="http://wiki.ros.org/actionlib_msgs">actionlib_msgs</a>),
    diagnostics (<a href="http://wiki.ros.org/diagnostic_msgs">diagnostic_msgs</a>),
    geometric primitives (<a href="http://wiki.ros.org/geometry_msgs">geometry_msgs</a>),
    robot navigation (<a href="http://wiki.ros.org/nav_msgs">nav_msgs</a>),
    and common sensors (<a href="http://wiki.ros.org/sensor_msgs">sensor_msgs</a>), such as laser range finders, cameras, point clouds.
  </description>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>BSD</license>

  <url>http://wiki.ros.org/common_msgs</url>
  <author email="tfoote@osrfoundation.org">Tully Foote</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
