<package>
  <name>stereo_msgs</name>
  <version>1.13.1</version>
  <description>
    stereo_msgs contains messages specific to stereo processing, such as disparity images.
  </description>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>BSD</license>

  <url>http://wiki.ros.org/stereo_msgs</url>
  <author>Patrick Mihelich</author>
  <author>Kurt Konolige</author>
  <author email="tfoote@osrfoundation.org">Tully Foote</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
